--- a/filmes.html
+++ b/filmes.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="conteudo.css">
     <title>Filmes</title>
 </head>
-<body class="filmes">
+<body id="filmes">
     <div id="barra-superior">
         <p class="links-barra" id="principal"><a href="index.html">Página Principal</a></p>
         <p class="links-barra"><a href="series.html" class="links-barra">Series</a></p>
