--- a/series.html
+++ b/series.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="conteudo.css">
     <title>Series</title>
 </head>
-<body class="series">
+<body id="series">
     <div id="barra-superior">
         <p class="links-barra" id="principal"><a href="index.html">Página Principal</a></p>
         <p class="links-barra"><a href="filmes.html" class="links-barra">Filmes</a></p>
