--- a/desenhosanimados.html
+++ b/desenhosanimados.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="conteudo.css">
     <title>Desenhos Animados</title>
 </head>
-<body class="desenhos-animados">
+<body id="desenhos-animados">
     <div id="barra-superior">
         <p class="links-barra" id="principal"><a href="index.html">Página Principal</a></p>
         <p class="links-barra"><a href="filmes.html" class="links-barra">Filmes</a></p>
