Imagens e Pag de Contato

--- a/contato.html
+++ b/contato.html
@@ -16,5 +16,29 @@
         <p class="links-barra"><a href="animes.html" class="links-barra">Animes</a></p>
         <p class="links-barra"><a href="jogos.html" class="links-barra">Jogos</a></p>
     </div>
+    <div id="conteudo" class="formulario">
+        <h2>Gostaria de deixar alguma sugestão para a equipe?</h2>
+        <form action="" method="post">
+            <h4>Nome:</h4>
+            <input type="text" name="nome" title="Nome" value="">
+            <h4>E-mail:</h4>
+            <input type="email" name="email" title="E-mail" value="">
+            <h4></h4>
+            <fieldset id="opcoes">
+                <legend>Sobre quais partes você deseja comentar?</legend>
+                <ul>
+                    <li><input type="checkbox" name="filmes">Filmes</input></li>
+                    <li><input type="checkbox" name="series">Séries</input></li>
+                    <li><input type="checkbox" name="desenhos-animados">Desenhos Animados</input></li>
+                    <li><input type="checkbox" name="animes">Animes</input></li>
+                    <li><input type="checkbox" name="jogos">Jogos</input></li>
+                </ul>
+            </fieldset>
+            <h4>Sugestão:</h4>
+            <textarea name="sugestao-do-usuario" rows="5" cols="50" title="Sugestão"></textarea>
+            <h3></h3>
+            <button type="submit">Enviar sugestão</button>
+        </form>
+    </div>
 </body>
 </html>
