Pagina de contato

--- a/desenhosanimados.html
+++ b/desenhosanimados.html
@@ -19,16 +19,16 @@
         <div id="primeiro">
             <div class="generos">
                 <h4>Gêneros: </h4>
-                <h5>Terror</h5> <h5>Aventura</h5>
+                <h5>Comédia</h5> <h5>Infantil</h5>
             </div>
-            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <p class="formatacao-texto">Mostra a vida de uma esponja com calça, amiga de uma estrela do mar, que mora numa casa em formato de abacaxi e trabalha numa hamburgueria.<br><br></p>
             <!--  Nome, sinopse e trailer  -->
             <details>
                 <summary>▶ Descobriu qual é?</summary>
                 <div class="resposta">
                     <div class="informacoes">
-                        <p class="formatacao-texto">Nome: Lorem ipsum</p>
-                        <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur laboriosam sed vero itaque nihil vitae totam ad magni atque? Accusamus libero saepe vero aut ut vitae magni impedit minima veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas modi nemo necessitatibus, nisi veniam at temporibus sint totam quam distinctio illum velit officiis dolore perspiciatis aliquam, perferendis dolor libero omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolores architecto eos sunt reprehenderit. Magni sint qui porro expedita ab, velit fuga officiis dolor sapiente? Eligendi delectus nulla quas minima!</p>
+                        <p class="formatacao-texto">Nome: Bob esponja</p>
+                        <p class="formatacao-texto">Uma esponja-do-mar chamada Bob Esponja Calça Quadrada mora com seu caracol de estimação na Fenda do Biquíni, no fundo do oceano. Bob trabalha no Siri Cascudo e, nas horas vagas, vive arrumando confusões com seu melhor amigo, a estrela-do-mar Patrick.</p>
                     </div>
                     <div class="trailer">
                         <video width="380" src="Vídeos\Avalanche.mp4" controls>
@@ -40,18 +40,18 @@
         <div id="segundo">
             <div class="generos">
                 <h4>Gêneros: </h4>
-                <h5>Comédia</h5> <h5>Romance</h5>
+                <h5>Fantasia televisiva</h5> <h5>Ficção de aventura</h5>
             </div>
-            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <p class="formatacao-texto">Mostra um grupo de bruxas que estudam numa escola de feitiçaria e dão uma de liga da justiça só que sendo de bruxas.<br><br></p>
             <details>
                 <summary>▶ Descobriu qual é?</summary>
                 <div class="resposta">
                     <div class="informacoes">
-                        <p class="formatacao-texto">Nome: Lorem ipsum</p>
-                        <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint.</p>
+                        <p class="formatacao-texto">Nome: Winx</p>
+                        <p class="formatacao-texto">Bloom é uma garota especial com poderes mágicos que viaja para a Escola de Fadas para aperfeiçoar suas habilidades. Ela rapidamente se torna amiga das fadas Stella, Flora, Musa, Layla e Tecna, e juntas elas usam seus poderes para salvar o universo.</p>
                     </div>
-                    <div class="trailer">
-                        <video width="380" src="Vídeos\Minha_Mae_e_Uma_Peca_3.mp4" controls>
+                    <div class="Imagens">
+                        <image width="380" src="Vídeos\Minha_Mae_e_Uma_Peca_3.mp4" controls>
                     </div>
                 </div>
             </details>
@@ -59,16 +59,16 @@
         <div id="terceiro">
             <div class="generos">
                 <h4>Gêneros: </h4>
-                <h5>Terror</h5> <h5>Aventura</h5>
+                <h5>Desenho animado</h5> <h5>Mistério</h5>
             </div>
-            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <p class="formatacao-texto">Dois irmãos vão passar as férias de verão na casa do Tio avô vida loka e descobrem segredos da região e do tio.<br><br></p>
             <!--  Nome, sinopse e trailer  -->
             <details>
                 <summary>▶ Descobriu qual é?</summary>
                 <div class="resposta">
                     <div class="informacoes">
-                        <p class="formatacao-texto">Nome: Lorem ipsum</p>
-                        <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur laboriosam sed vero itaque nihil vitae totam ad magni atque? Accusamus libero saepe vero aut ut vitae magni impedit minima veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas modi nemo necessitatibus, nisi veniam at temporibus sint totam quam distinctio illum velit officiis dolore perspiciatis aliquam, perferendis dolor libero omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolores architecto eos sunt reprehenderit. Magni sint qui porro expedita ab, velit fuga officiis dolor sapiente? Eligendi delectus nulla quas minima!</p>
+                        <p class="formatacao-texto">Nome:  Gravity Falls</p>
+                        <p class="formatacao-texto">Os gêmeos Dipper e Mabel Pines passam as férias com o tio-avô numa misteriosa cidade. Eles tentam se adaptar à estranha região, mas sentem algo estranho e começam a investigar. Dipper encontra um diário codificado e a aventura começa.</p>
                     </div>
                     <div class="trailer">
                         <video width="380" src="Vídeos\Avalanche.mp4" controls>
