--- a/series.html
+++ b/series.html
@@ -31,7 +31,7 @@
                         <p class="formatacao-texto">Oito ladrões se trancam com reféns na Casa da Moeda da Espanha. Seu líder manipula a polícia para realizar um plano. Será o maior roubo da história, ou uma missão em vão?</p>
                     </div>
                     <div class="trailer">
-                        <video width="380" src="Vídeos\Avalanche.mp4" controls>
+                        <a href="https://www.youtube.com/watch?v=To_kVMMu-Ls"><img src="https://br.web.img3.acsta.net/r_1280_720/newsv7/21/09/03/16/55/0038543.jpg" width="360px"></a>
                     </div>
                 </div>
             </details>
@@ -40,15 +40,15 @@
         <div id="segundo">
             <div class="generos">
                 <h4>Gêneros: </h4>
-                <h5>Comédia</h5> <h5>Romance</h5>
+                <h5>Aventura</h5> <h5>Mistério</h5>
             </div>
-            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <p class="formatacao-texto">Retrata a vida de um surfista que tem 3 amigos, juntos eles descobrem a existência de um tesouro e vão tentar pegar mas pra isso ele vai ter que disputar com um chefão mafioso da região e de quebra ainda vai se apaixonar pela patricinha filha do chefão.<br><br></p>
             <details>
                 <summary>▶ Descobriu qual é?</summary>
                 <div class="resposta">
                     <div class="informacoes">
-                        <p class="formatacao-texto">Nome: Lorem ipsum</p>
-                        <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint.</p>
+                        <p class="formatacao-texto">Nome: Outer Banks</p>
+                        <p class="formatacao-texto">O jovem John convoca seus melhores amigos para procurarem por um tesouro ligado ao desaparecimento de seu pai. Aos poucos, o grupo vai entrando em uma perigosa trama de segredos e perigos.</p>
                     </div>
                     <div class="trailer">
                         <video width="380" src="Vídeos\Minha_Mae_e_Uma_Peca_3.mp4" controls>
@@ -59,16 +59,16 @@
         <div id="terceiro">
             <div class="generos">
                 <h4>Gêneros: </h4>
-                <h5>Terror</h5> <h5>Aventura</h5>
+                <h5>Drama</h5> <h5>Fantasia Medieval</h5>
             </div>
-            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <p class="formatacao-texto">Há uma disputa entre 7 reinos pela coroa, de fazer qualquer vizinha fofoqueira endoidecer, porque tem muita traição.<br><br></p>
             <!--  Nome, sinopse e trailer  -->
             <details>
                 <summary>▶ Descobriu qual é?</summary>
                 <div class="resposta">
                     <div class="informacoes">
-                        <p class="formatacao-texto">Nome: Lorem ipsum</p>
-                        <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur laboriosam sed vero itaque nihil vitae totam ad magni atque? Accusamus libero saepe vero aut ut vitae magni impedit minima veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas modi nemo necessitatibus, nisi veniam at temporibus sint totam quam distinctio illum velit officiis dolore perspiciatis aliquam, perferendis dolor libero omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolores architecto eos sunt reprehenderit. Magni sint qui porro expedita ab, velit fuga officiis dolor sapiente? Eligendi delectus nulla quas minima!</p>
+                        <p class="formatacao-texto">Nome: Game of Thrones</p>
+                        <p class="formatacao-texto">Este é o retrato de duas famílias poderosas - reis e rainhas, cavaleiros e renegados, homens honestos e mentirosos - disputando um jogo mortal pelo controle dos Sete Reinos de Westeros para assumir o Trono de Ferro.</p>
                     </div>
                     <div class="trailer">
                         <video width="380" src="Vídeos\Avalanche.mp4" controls>
