--- a/equipe.html
+++ b/equipe.html
@@ -16,5 +16,19 @@
         <p class="links-barra"><a href="animes.html" class="links-barra">Animes</a></p>
         <p class="links-barra"><a href="jogos.html" class="links-barra">Jogos</a></p>
     </div>
+    <div id="conteudo" class="equipe">
+        <h1>Equipe desenvolvedora<br><br></h1>
+        <div class="grid-equipe" id="alvaro">
+            <img src="" alt="Álvaro" width="360px" height="360px">
+            <p><b>Álvaro Renan</b><br><br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, atque sint illo itaque consectetur asperiores perferendis architecto, odio illum alias minima deleniti quidem, sapiente eum nemo deserunt facilis ratione laudantium! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam molestiae dolore, voluptatem labore rerum minus qui aliquam, et nostrum hic harum? Aliquid accusantium quam deleniti expedita fugiat ratione pariatur esse. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta ullam enim facilis dolorum, placeat esse tenetur obcaecati explicabo sequi. Dolore, assumenda! Molestiae blanditiis inventore suscipit. Placeat esse sequi alias nisi!</p>
+        </div>
+        <div class="grid-equipe" id="caio">
+            <img src="Imagens/Caio.jpeg" alt="Caio" width="360px" height="360px">
+            <p><b>Caio Pinheiro</b><br><br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, atque sint illo itaque consectetur asperiores perferendis architecto, odio illum alias minima deleniti quidem, sapiente eum nemo deserunt facilis ratione laudantium! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam molestiae dolore, voluptatem labore rerum minus qui aliquam, et nostrum hic harum? Aliquid accusantium quam deleniti expedita fugiat ratione pariatur esse. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta ullam enim facilis dolorum, placeat esse tenetur obcaecati explicabo sequi. Dolore, assumenda! Molestiae blanditiis inventore suscipit. Placeat esse sequi alias nisi!</p>
+        </div>
+        <div class="grid-equipe" id="debora">
+            <img src="" alt="Débora" width="360px" height="360px">
+            <p><b>Débora Camilly</b><br><br>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste, atque sint illo itaque consectetur asperiores perferendis architecto, odio illum alias minima deleniti quidem, sapiente eum nemo deserunt facilis ratione laudantium! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam molestiae dolore, voluptatem labore rerum minus qui aliquam, et nostrum hic harum? Aliquid accusantium quam deleniti expedita fugiat ratione pariatur esse. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta ullam enim facilis dolorum, placeat esse tenetur obcaecati explicabo sequi. Dolore, assumenda! Molestiae blanditiis inventore suscipit. Placeat esse sequi alias nisi!</p>
+        </div>
 </body>
 </html>
