--- a/jogos.html
+++ b/jogos.html
@@ -19,16 +19,16 @@
         <div id="primeiro">
             <div class="generos">
                 <h4>Gêneros: </h4>
-                <h5>Terror</h5> <h5>Aventura</h5>
+                <h5>Suspense</h5> <h5>Mistério</h5>
             </div>
-            <p class="formatacao-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel reprehenderit, velit illum placeat, veritatis molestiae temporibus impedit vero eum consectetur facere debitis libero adipisci quae doloremque quidem sapiente modi illo! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro repudiandae facere exercitationem neque, tempora molestias nostrum labore reiciendis? Iusto eos labore animi similique commodi tempora dolor nulla debitis nihil illum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium explicabo fugiat, soluta aliquid ad possimus corrupti quisquam illo autem doloribus cupiditate quae debitis amet earum voluptates veritatis recusandae dolorem beatae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita mollitia reprehenderit veritatis tempore blanditiis harum dolor numquam a, inventore, hic nulla illum dolorem velit quasi doloremque accusamus asperiores placeat sed.<br><br></p>
+            <p class="formatacao-texto">Um jogo que divide o grupo em fascistas, liberais e um Hitler, nele você deve usar da persuasão <br><br></p>
             <!--  Nome, sinopse e trailer  -->
             <details>
                 <summary>▶ Descobriu qual é?</summary>
                 <div class="resposta">
                     <div class="informacoes">
-                        <p class="formatacao-texto">Nome: Lorem ipsum</p>
-                        <p class="formatacao-texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis hic adipisci porro commodi? Voluptatem quia a fuga distinctio facere qui ipsam, sit reiciendis assumenda harum officiis sunt, est sapiente sint. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur laboriosam sed vero itaque nihil vitae totam ad magni atque? Accusamus libero saepe vero aut ut vitae magni impedit minima veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas modi nemo necessitatibus, nisi veniam at temporibus sint totam quam distinctio illum velit officiis dolore perspiciatis aliquam, perferendis dolor libero omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolores architecto eos sunt reprehenderit. Magni sint qui porro expedita ab, velit fuga officiis dolor sapiente? Eligendi delectus nulla quas minima!</p>
+                        <p class="formatacao-texto">Nome: Secret Hitler</p>
+                        <p class="formatacao-texto">Secret Hitler é um jogo dramático de intriga política e traição definido na Alemanha de 1930. Cada jogador será secreta e aleatoriamente nomeado para ser um liberal ou um fascista, e um jogador será Secret Hitler. Os fascistas irão se coordenar para semear a desconfiança e instalarem seu líder sangue-frio; os liberais precisam encontrar e impedir o Secret Hitler antes que seja tarde demais. O time dos liberais sempre tem uma maioria.</p>
                     </div>
                     <div class="trailer">
                         <video width="380" src="Vídeos\Avalanche.mp4" controls>
