--- a/animes.html
+++ b/animes.html
@@ -56,6 +56,7 @@
                 </div>
             </details>
         </div>
+        <h6 class="divisao"><br></h6>
         <div id="terceiro">
             <div class="generos">
                 <h4>Gêneros: </h4>
