--- a/contato.html
+++ b/contato.html
@@ -18,7 +18,7 @@
     </div>
     <div id="conteudo" class="formulario">
         <h2>Gostaria de deixar alguma sugestão para a equipe?</h2>
-        <form action="" method="post">
+        <form action="https://formspree.io/f/mleazpwv" method="post">
             <h4>Nome:</h4>
             <input type="text" name="nome" title="Nome" value="">
             <h4>E-mail:</h4>
