--- a/filmes.html
+++ b/filmes.html
@@ -31,7 +31,7 @@
                         <p class="formatacao-texto">Um vírus letal se espalha rapidamente e transforma seres humanos em zumbis. O ex-agente da ONU Gerry Lane é chamado para investigar a epidemia que está acabando com a humanidade, iniciando uma verdadeira corrida contra o tempo.</p>
                     </div>
                     <div class="trailer">
-                        <video width="380" src="Vídeos\Avalanche.mp4" controls>
+                        <image width="380" src="https://cdnv2.moovin.com.br/continentalcenter/imagens/produtos/det/MKP000315007130-guerra-mundial-z-dvd-filme-suspense_4483.jpg">
                     </div>
                 </div>
             </details>
@@ -51,7 +51,7 @@
                         <p class="formatacao-texto">Kay e Jay, os "Homens de Preto", são o maior segredo já mantido no universo. Eles são agentes de uma agência não-oficial do governo e responsáveis por monitorar todos os encontros com alienígenas na Terra. Ao investigar uma série de atividades extraterrestres, descobrem um terrorista intergaláctico cuja missão é assassinar dois embaixadores de galáxias opostas.</p>
                     </div>
                     <div class="trailer">
-                        <video width="380" src="Vídeos\Minha_Mae_e_Uma_Peca_3.mp4" controls>
+                        <image width="380" src="https://br.web.img3.acsta.net/medias/nmedia/18/90/71/71/20109801.jpg">
                     </div>
                 </div>
             </details>
@@ -71,7 +71,7 @@
                         <p class="formatacao-texto">No exuberante mundo alienígena de Pandora vivem os Na'vi, seres que parecem ser primitivos, mas são altamente evoluídos. Como o ambiente do planeta é tóxico, foram criados os avatares, corpos biológicos controlados pela mente humana que se movimentam livremente em Pandora. Jake Sully, um ex-fuzileiro naval paralítico, volta a andar através de um avatar e se apaixona por uma Na'vi. Esta paixão leva Jake a lutar pela sobrevivência de Pandora.</p>
                     </div>
                     <div class="trailer">
-                        <video width="380" src="Vídeos\Avalanche.mp4" controls>
+                        <image width="380" src="https://paranoiasnfm.files.wordpress.com/2010/01/17aa718c1ab15b482505b8431cf596fc.jpg">
                     </div>
                 </div>
             </details>
@@ -82,17 +82,17 @@
                 <h4>Gêneros: </h4>
                 <h5>Suspense</h5> <h5>Drama</h5>
             </div>
-            <p class="formatacao-texto">Um doido arquiteta um plano para roubar a casa da moeda da Espanha, convoca outros doidos que nem ele, se preparam com armas e vão. Mas como o doido chefe é o bichão ele já sabe o que vai dar errado e como resolver.<br><br></p>
+            <p class="formatacao-texto"><br><br></p>
             <!--  Nome, sinopse e trailer  -->
             <details>
                 <summary>▶ Descobriu qual é?</summary>
                 <div class="resposta">
                     <div class="informacoes">
-                        <p class="formatacao-texto">Nome:La casa de Papel</p>
-                        <p class="formatacao-texto">Oito ladrões se trancam com reféns na Casa da Moeda da Espanha. Seu líder manipula a polícia para realizar um plano. Será o maior roubo da história, ou uma missão em vão?</p>
+                        <p class="formatacao-texto">Nome:</p>
+                        <p class="formatacao-texto"></p>
                     </div>
                     <div class="trailer">
-                        <video width="380" src="Vídeos\Avalanche.mp4" controls>
+                        <video width="380" src="https://i.glbimg.com/og/ig/infoglobo/f/original/2021/08/27/02112359593116.jpg">
                     </div>
                 </div>
             </details>
