--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
         <p class="links-barra"><a href="jogos.html" class="links-barra">Jogos</a></p>
     </div>
     <div id="conteudo">
-        <p><a href="contato.html">Contato</a></p>
-        <p><a href="equipe.html">Equipe</a></p>
+        <h1 id="titulo">Hello World!</h1>
+        <p><a id="link-contato" href="contato.html">Contato</a></p>
+        <p><a id="link-equipe" href="equipe.html">Equipe</a></p>
     </div>
     <footer>
         
